fix footer spacing bug

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -86,7 +86,7 @@
       grid-template-areas: "contacts developers"
         "disclaimer disclaimer";
       grid-template-rows: auto auto;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 2fr 1fr;
     }
 
     .contacts {
